# csp_payload_msp430

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  msp430-toolchain.cmake
payload/: CMakeLists.txt  main.c
payload/config/freertos/inc/: FreeRTOSConfig.h
payload/config/freertos/src/: FreeRTOSConfig.c
payload/config/system/inc/: __stdlib.h  endian.h
payload/config/system/src/: endian.c
payload/drivers/dbg_print/: CMakeLists.txt
payload/drivers/dbg_print/inc/: dbg_print.h
payload/drivers/dbg_print/src/: dbg_print.c
payload/drivers/led/: CMakeLists.txt
payload/drivers/led/inc/: led.h
payload/drivers/led/src/: led.c
payload/drivers/msp430fr5xx_6xx/: CMakeLists.txt
payload/drivers/msp430fr5xx_6xx/inc/: hw_memmap.h
payload/drivers/service_led/: CMakeLists.txt
payload/drivers/service_led/inc/: service_led.h
payload/drivers/service_led/src/: service_led.c
payload/middleware/freertos/: CMakeLists.txt
payload/middleware/freertos/portable/: CMakeLists.txt
payload/middleware/freertos/portable/ccs/msp430x/: FreeRTOSConfig.c  FreeRTOSConfig.h  port.c  portmacro.h
payload/middleware/freertos/portable/gcc/msp430fr5994/: port.c  portmacro.h
payload/services/service_task/: CMakeLists.txt
payload/services/service_task/inc/: service_task.h
payload/services/service_task/src/: service_task.c
payload/tools/: CMakeLists.txt
payload/tools/serial/: serial.c
toolchain/: msp430-ccs-toolchain.cmake  msp430-gcc-toolchain.cmake  msp430fr5994.cmd  msp430fr5994.ld
